spade-tests/src/snapshots/spade_tests__typeinference__inverse_order_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 2] {
    x[2..0]
}


error: Expected type [#type; #uint], got [#type; -2]
  ┌─ testinput:2:5
  │
2 │     x[2..0]
  │     ^^^^^^^ Expected [#type; #uint], got [#type; -2]
  │
  = note: Expected: #uint
                in: [#type; #uint]
               Got: -2
                in: [#type; -2]
